fixed top shawdow being clippled on product card

--- a/assets/product-grid.css
+++ b/assets/product-grid.css
@@ -44,6 +44,8 @@
     .products.carousel .promotion-column {
       margin-bottom: 0;
       height: 100%; }
+    .products.carousel .flickity-viewport {
+      padding-top: 4px; }
     @media only screen and (max-width: 767px) {
       .products.carousel .flickity-viewport {
         overflow: visible; } }
